<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="397dp"
        android:layout_height="427dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/siete" />

            <Button
                android:id="@+id/b8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/ocho" />

            <Button
                android:id="@+id/b9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/nueve" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/cuatro" />

            <Button
                android:id="@+id/b5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/cinco" />

            <Button
                android:id="@+id/b6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/seis" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/b1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/uno" />

            <Button
                android:id="@+id/b2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/dos" />

            <Button
                android:id="@+id/b3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/tres" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/suma" />

            <Button
                android:id="@+id/b0"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/cero" />

            <Button
                android:id="@+id/button10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/resta" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/multiplicar" />

            <Button
                android:id="@+id/button12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/igual" />

            <Button
                android:id="@+id/button13"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/dividir" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button14"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="4sp"
                android:layout_weight="1"
                android:text="@string/valores" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="416dp"
        android:layout_height="211dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et1"
            android:layout_width="match_parent"
            android:layout_height="208dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number"
            android:text="0"
            android:textSize="96sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>